--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -42,3 +42,14 @@ body {
 .border-item{
   border-bottom: 1px solid slategray ;
 }
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent !important;
+  border: none !important;
+  font-size: 40px !important;
+  cursor: pointer;
+  z-index: 100;
+  color: black !important;
+}
