Add form Forgot and reset password user

--- a/FE/src/Style/login.css
+++ b/FE/src/Style/login.css
@@ -214,9 +214,7 @@
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background-image: url("image/bgLogin.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
